kubernetes/apps/gdd-service/stasharr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stasharr
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/name: Stasharr
    gethomepage.dev/icon: stash.svg
    gethomepage.dev/description: "Tailscale only | Stash companion"
    gethomepage.dev/siteMonitor: "http://stasharr.gdd-service.svc:3000"
spec:
  ingressClassName: tailscale
  rules:
    - host: stasharr.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stasharr
                port:
                  number: 3000
  tls:
    - hosts:
        - stasharr.barn-walleye.ts.net
